--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/AdministrateTournament.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/AdministrateTournament.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
@@ -7,71 +8,98 @@
 <?import javafx.scene.text.*?>
 
 <AnchorPane maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.AdministrateTournamentController">
-    <BorderPane maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: lightgray;" stylesheets="@style.css">
+    <BorderPane maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" styleClass="background" stylesheets="@style.css">
         <center>
             <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                 <center>
-                    <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+                    <VBox prefHeight="453.0" prefWidth="948.0" styleClass="background" BorderPane.alignment="CENTER">
                         <FlowPane prefHeight="45.0" prefWidth="960.0">
                             <Button mnemonicParsing="false" onAction="#displayAllMatches" prefHeight="30.0" prefWidth="145.0" text="All Matches">
                                 <FlowPane.margin>
                                     <Insets left="10.0" top="10.0" />
                                 </FlowPane.margin>
+                        <styleClass>
+                           <String fx:value="dark-small-text" />
+                           <String fx:value="Button" />
+                        </styleClass>
                             </Button>
                             <Button layoutX="20.0" layoutY="20.0" mnemonicParsing="false" onAction="#displayUpcomingMatches" prefHeight="30.0" prefWidth="145.0" text="Upcoming Matches">
                                 <FlowPane.margin>
                                     <Insets top="10.0" />
                                 </FlowPane.margin>
+                        <styleClass>
+                           <String fx:value="dark-small-text" />
+                           <String fx:value="Button" />
+                        </styleClass>
                             </Button>
                             <Button layoutX="159.0" layoutY="15.0" mnemonicParsing="false" onAction="#displayPreviousMatches" prefHeight="30.0" prefWidth="144.0" text="Previous Matches">
                                 <FlowPane.margin>
                                     <Insets top="10.0" />
                                 </FlowPane.margin>
+                        <styleClass>
+                           <String fx:value="dark-small-text" />
+                           <String fx:value="Button" />
+                        </styleClass>
                             </Button>
+                     <Label prefHeight="30.0" prefWidth="321.0" style="-fx-font-style: italic;" styleClass="medium-text" text="Double Click A Match To Enter Result" underline="true">
+                        <FlowPane.margin>
+                           <Insets left="40.0" top="10.0" />
+                        </FlowPane.margin>
+                     </Label>
                         </FlowPane>
                         <TableView fx:id="matchTable" prefHeight="441.0" prefWidth="934.0">
                             <columns>
-                                <TableColumn fx:id="teamsColumn" prefWidth="323.40002477169037" text="Teams" />
+                                <TableColumn fx:id="teamsColumn" prefWidth="315.0" text="Teams" />
                                 <TableColumn fx:id="resultColumn" minWidth="0.0" prefWidth="231.0" text="Result" />
-                                <TableColumn fx:id="dateColumn" minWidth="0.0" prefWidth="121.0" text="Date" />
-                                <TableColumn fx:id="timeColumn" minWidth="0.0" prefWidth="127.0" text="Time" />
-                                <TableColumn fx:id="infoColumn" minWidth="0.0" prefWidth="137.6000854492188" text="Info" />
+                                <TableColumn fx:id="dateColumn" minWidth="0.0" prefWidth="120.0" text="Date" />
+                                <TableColumn fx:id="timeColumn" minWidth="0.0" prefWidth="100.0" text="Time" />
+                                <TableColumn fx:id="infoColumn" minWidth="0.0" prefWidth="160.0" text="Info" />
                             </columns>
                             <VBox.margin>
                                 <Insets bottom="10.0" left="10.0" right="10.0" />
                             </VBox.margin>
                         </TableView>
+                  <BorderPane.margin>
+                     <Insets left="5.0" right="5.0" />
+                  </BorderPane.margin>
                     </VBox>
                 </center>
             </BorderPane>
         </center>
         <top>
-            <VBox prefHeight="78.0" prefWidth="960.0" BorderPane.alignment="CENTER">
+            <VBox prefHeight="105.0" prefWidth="960.0" BorderPane.alignment="CENTER">
                 <fx:include fx:id="topMenuBar" source="TopMenuBar.fxml" />
-                <HBox prefHeight="100.0" prefWidth="200.0">
-                    <Pane prefHeight="58.0" prefWidth="11.0" />
-                    <Button mnemonicParsing="false" onAction="#displayPopUpMenu" prefHeight="58.0" prefWidth="88.0" style="-fx-background-color: lightgray; -fx-border-color: lightgray;">
-                        <graphic>
-                            <ImageView fitHeight="50.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true">
-                                <Image url="@icons/menu.png" />
-                            </ImageView>
-                        </graphic>
-                    </Button>
-                    <Pane prefHeight="102.0" prefWidth="69.0" />
-                    <Text fx:id="tournamentNameOutput" fill="#18205b" strokeType="OUTSIDE" strokeWidth="0.0" text="Administrate Tournament name" textAlignment="CENTER" wrappingWidth="634.6186668872833">
-                        <font>
-                            <Font size="35.0" />
-                        </font>
-                    </Text>
-                    <Pane layoutX="90.0" layoutY="10.0" prefHeight="102.0" prefWidth="58.0" />
-                    <StackPane prefHeight="58.0" prefWidth="84.0">
-                        <TextField fx:id="clock" alignment="CENTER" prefHeight="31.0" prefWidth="91.0" text="10:09:35">
-                            <font>
-                                <Font size="15.0" />
-                            </font>
-                        </TextField>
-                    </StackPane>
+                <HBox prefHeight="100.0" prefWidth="200.0" styleClass="dark-background">
+               <HBox alignment="CENTER_LEFT" prefHeight="59.0" prefWidth="200.0" styleClass="dark-background">
+                  <children>
+                          <Button mnemonicParsing="false" onAction="#displayPopUpMenu" prefHeight="58.0" prefWidth="88.0" style="-fx-border-color: #2D2D2D;">
+                              <graphic>
+                                  <ImageView fitHeight="50.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true" styleClass="button">
+                                      <Image url="@icons/menu_bright.png" />
+                                  </ImageView>
+                              </graphic>
+                        <styleClass>
+                           <String fx:value="dark-background" />
+                           <String fx:value="Button" />
+                        </styleClass>
+                          </Button>
+                  </children>
+               </HBox>
+               <Label fx:id="tournamentNameOutput" alignment="CENTER" prefHeight="65.0" prefWidth="567.0" styleClass="title-text" text="Administrate Tournament" />
+               <HBox alignment="CENTER_RIGHT" prefHeight="59.0" prefWidth="200.0" styleClass="dark-background">
+                  <children>
+                           <TextField fx:id="clock" alignment="CENTER" prefHeight="31.0" prefWidth="91.0" text="10:09:35">
+                               <font>
+                                   <Font size="15.0" />
+                               </font>
+                        <HBox.margin>
+                           <Insets right="20.0" />
+                        </HBox.margin>
+                           </TextField>
+                  </children>
+               </HBox>
                 </HBox>
+            <Pane minHeight="7.0" prefHeight="7.0" prefWidth="200.0" style="-fx-background-color: #019A06;" />
             </VBox>
         </top>
     </BorderPane>
