--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterMultiTeamResults.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterMultiTeamResults.fxml
@@ -1,23 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: lightgray;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.EnterMultiTeamResultsController">
+<AnchorPane fx:id="anchorPane" maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: lightgray;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.EnterMultiTeamResultsController">
     <children>
-        <BorderPane prefHeight="540.0" prefWidth="960.0" stylesheets="@style.css">
+        <BorderPane prefHeight="540.0" prefWidth="960.0" styleClass="background" stylesheets="@style.css">
             <top>
                 <VBox prefHeight="27.0" prefWidth="960.0" BorderPane.alignment="CENTER">
                     <children>
@@ -36,7 +27,7 @@
                            <children>
                               <ScrollPane hbarPolicy="NEVER" prefHeight="302.0" prefWidth="958.0">
                                  <content>
-                                    <VBox fx:id="teamVBox" prefHeight="302.0" prefWidth="947.0" />
+                                    <VBox fx:id="teamVBox" prefHeight="302.0" prefWidth="947.0" styleClass="light-background" />
                                  </content>
                               </ScrollPane>
                            </children>
@@ -45,7 +36,7 @@
                      <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </VBox.margin></VBox>
-                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="960.0">
+                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="960.0" styleClass="light-background">
                             <children>
                                 <VBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="66.0" prefWidth="250.0">
                                     <children>
@@ -88,9 +79,8 @@
                                 </VBox>
                             </children>
                         </HBox>
-                        <HBox prefHeight="76.0" prefWidth="960.0">
+                        <HBox alignment="CENTER" prefHeight="76.0" prefWidth="960.0">
                             <children>
-                                <Pane prefHeight="90.0" prefWidth="92.0" />
                                 <Button mnemonicParsing="false" onAction="#returnToAdministrateTournament" prefHeight="69.0" prefWidth="300.0" style="-fx-background-color: #FF282D; -fx-border-color: black; -fx-text-fill: white; -fx-font-size: 20pt;" text="Cancel" textFill="WHITE">
                                     <font>
                                         <Font size="25.0" />
@@ -98,8 +88,10 @@
                                     <effect>
                                         <DropShadow />
                                     </effect>
+                           <HBox.margin>
+                              <Insets right="30.0" />
+                           </HBox.margin>
                                 </Button>
-                                <Pane layoutX="10.0" layoutY="10.0" prefHeight="90.0" prefWidth="130.0" />
                                 <Button defaultButton="true" mnemonicParsing="false" onAction="#confirmResultsAndGoBack" prefHeight="69.0" prefWidth="308.0" style="-fx-background-color: #03AC13; -fx-border-color: black; -fx-text-fill: White; -fx-font-size: 20pt;" text="Confirm Results" textFill="WHITE">
                                     <font>
                                         <Font size="25.0" />
@@ -107,6 +99,9 @@
                                     <effect>
                                         <DropShadow />
                                     </effect>
+                           <HBox.margin>
+                              <Insets left="30.0" />
+                           </HBox.margin>
                                 </Button>
                             </children>
                             <VBox.margin>
