--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterTimeResults.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterTimeResults.fxml
@@ -1,25 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: lightgray;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.EnterTimeResultsController">
+<AnchorPane fx:id="anchorPane" maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: lightgray;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.EnterTimeResultsController">
     <children>
-        <BorderPane prefHeight="540.0" prefWidth="960.0" stylesheets="@style.css">
+        <BorderPane prefHeight="540.0" prefWidth="960.0" styleClass="background" stylesheets="@style.css">
             <top>
                 <VBox prefHeight="27.0" prefWidth="960.0" BorderPane.alignment="CENTER">
                     <children>
@@ -29,14 +19,14 @@
                 </VBox>
             </top>
             <center>
-                <VBox prefHeight="502.0" prefWidth="960.0" BorderPane.alignment="CENTER">
+                <VBox prefHeight="502.0" prefWidth="960.0" styleClass="dark-background" BorderPane.alignment="CENTER">
                     <children>
-                          <SplitPane prefHeight="347.0" prefWidth="960.0">
+                          <SplitPane prefHeight="347.0" prefWidth="960.0" style="-fx-background-color: #707070;">
                               <items>
-                        <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="300.0" prefWidth="958.0">
+                        <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="300.0" prefWidth="958.0" styleClass="light-background">
                           <items>
                               <VBox alignment="BOTTOM_CENTER" prefHeight="155.0" prefWidth="958.0">
-                                  <Text fx:id="team1Text" fill="#3c4a6b" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 20pt;" textAlignment="CENTER" wrappingWidth="700.0000145435333">
+                                  <Text fx:id="team1Text" fill="#3c4a6b" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #F1F2EB;" styleClass="title-text" textAlignment="CENTER" wrappingWidth="700.0000145435333">
                                       <font>
                                         <Font size="45.0" />
                                       </font>
@@ -221,7 +211,7 @@
                               </VBox>
                               <VBox alignment="BOTTOM_CENTER" prefHeight="154.0" prefWidth="958.0">
                                   <children>
-                                      <Text fx:id="team2Text" fill="#3c4a6b" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 20pt;" textAlignment="CENTER" wrappingWidth="700.0000114440918">
+                                      <Text fx:id="team2Text" fill="#3c4a6b" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #F1F2EB;" styleClass="title-text" textAlignment="CENTER" wrappingWidth="700.0000114440918">
                                           <font>
                                               <Font size="45.0" />
                                           </font>
@@ -413,7 +403,7 @@
                      <children>
                         <VBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="66.0" prefWidth="250.0">
                            <children>
-                                      <Text fill="#5b5b5b" strokeType="OUTSIDE" strokeWidth="0.0" text="Date">
+                                      <Text fill="#5b5b5b" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #F7F7F3;" text="Date">
                                           <font>
                                               <Font size="20.0" />
                                           </font>
@@ -426,7 +416,7 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="74.0" prefWidth="251.0">
                            <children>
-                                      <Text fill="#5b5b5b" strokeType="OUTSIDE" strokeWidth="0.0" text="Time">
+                                      <Text fill="#5b5b5b" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #F7F7F3;" text="Time">
                                           <font>
                                               <Font size="20.0" />
                                           </font>
@@ -439,7 +429,7 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="250.0">
                            <children>
-                                      <Text fill="#5b5b5b" strokeType="OUTSIDE" strokeWidth="0.0" text="Info">
+                                      <Text fill="#5b5b5b" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #F7F7F3;" text="Info">
                                           <font>
                                               <Font size="20.0" />
                                           </font>
