--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/HomePage.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/HomePage.fxml
@@ -1,50 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.effect.InnerShadow?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960" prefHeight="540.0" prefWidth="960" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.HomePageController">
+<AnchorPane maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960" prefHeight="540.0" prefWidth="960" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.HomePageController">
    <children>
-      <BorderPane layoutY="-2.0" prefHeight="544.0" prefWidth="962.0" stylesheets="@style.css">
+      <BorderPane layoutY="-2.0" prefHeight="544.0" prefWidth="962.0" styleClass="dark-background" stylesheets="@style.css">
          <top>
-            <VBox prefHeight="13.0" prefWidth="962.0" BorderPane.alignment="CENTER">
+            <VBox prefHeight="13.0" prefWidth="962.0" styleClass="dark-background" BorderPane.alignment="CENTER">
                <children>
-                   <fx:include fx:id="topMenuBar" source="TopMenuBar.fxml"/>
+                   <fx:include fx:id="topMenuBar" source="TopMenuBar.fxml" />
                </children>
             </VBox>
          </top>
          <center>
-            <AnchorPane prefHeight="534.0" prefWidth="962.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Button alignment="CENTER" layoutX="365.0" layoutY="174.0" mnemonicParsing="false" onAction="#changeScreenToCreateTournament" prefHeight="60.0" prefWidth="231.0" text="Create new tournament">
-                     <effect>
-                        <InnerShadow />
-                     </effect>
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="CENTER" layoutX="366.0" layoutY="274.0" mnemonicParsing="false" onAction="#OpenTournamentFromFile" prefHeight="60.0" prefWidth="229.0" text="Open tournament" textAlignment="CENTER">
-                     <effect>
-                        <InnerShadow />
-                     </effect>
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Button>
-                  <Label alignment="CENTER" layoutX="292.0" layoutY="30.0" prefHeight="106.0" prefWidth="369.0" style="-fx-font-size: 30;" text="Tournamint">
-                     <font>
-                        <Font size="36.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
+            <BorderPane prefHeight="200.0" prefWidth="200.0" styleClass="background" BorderPane.alignment="CENTER">
+               <center>
+                  <VBox alignment="TOP_CENTER" prefHeight="346.0" prefWidth="962.0" styleClass="background" BorderPane.alignment="TOP_CENTER">
+                     <children>
+                        <Button alignment="CENTER" mnemonicParsing="false" onAction="#changeScreenToCreateTournament" prefHeight="60.0" prefWidth="231.0" text="Create new tournament">
+                           <effect>
+                              <InnerShadow />
+                           </effect>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="20.0" left="20.0" right="20.0" top="60.0" />
+                           </VBox.margin>
+                           <styleClass>
+                              <String fx:value="dark-medium-text" />
+                              <String fx:value="custom-button" />
+                           </styleClass>
+                        </Button>
+                        <Button alignment="CENTER" mnemonicParsing="false" onAction="#OpenTournamentFromFile" prefHeight="60.0" prefWidth="229.0" text="Open tournament" textAlignment="CENTER">
+                           <effect>
+                              <InnerShadow />
+                           </effect>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="20.0" left="20.0" right="20.0" />
+                           </VBox.margin>
+                           <styleClass>
+                              <String fx:value="dark-medium-text" />
+                              <String fx:value="custom-button" />
+                           </styleClass>
+                        </Button>
+                     </children>
+                  </VBox>
+               </center>
+               <top>
+                  <VBox alignment="CENTER" prefHeight="141.0" prefWidth="962.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <HBox alignment="CENTER" prefHeight="135.0" prefWidth="962.0" styleClass="dark-background">
+                           <children>
+                              <Label alignment="CENTER" prefHeight="120.0" prefWidth="370.0" style="-fx-font-size: 30;" styleClass="title-text" text="Tournamint">
+                                 <font>
+                                    <Font size="36.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <Pane prefHeight="7.0" prefWidth="962.0" style="-fx-background-color: #019A06;" />
+                     </children>
+                  </VBox>
+               </top>
+            </BorderPane>
          </center>
       </BorderPane>
    </children>
