--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterMultiTeamResults.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterMultiTeamResults.fxml
@@ -29,18 +29,24 @@
                                  <content>
                                     <VBox fx:id="teamVBox" prefHeight="302.0" prefWidth="947.0" styleClass="light-background" />
                                  </content>
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
                               </ScrollPane>
                            </children>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
                         </HBox>
                      </children>
                      <VBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
                      </VBox.margin></VBox>
-                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="960.0" styleClass="light-background">
+                        <HBox alignment="CENTER" prefHeight="76.0" prefWidth="1015.0" styleClass="light-background">
                             <children>
                                 <VBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="66.0" prefWidth="250.0">
                                     <children>
-                                        <Text fill="#5b5b5b" strokeType="OUTSIDE" strokeWidth="0.0" text="Date">
+                                        <Text fill="#5b5b5b" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #F1F2EB;" styleClass="medium-text" text="Date">
                                             <font>
                                                 <Font size="20.0" />
                                             </font>
@@ -48,12 +54,12 @@
                                         <DatePicker fx:id="dateField" prefHeight="35.0" prefWidth="250.0" promptText="DD.MM.YYYY" />
                                     </children>
                                     <HBox.margin>
-                                        <Insets left="15.0" right="15.0" />
+                                        <Insets bottom="10.0" left="15.0" right="15.0" />
                                     </HBox.margin>
                                 </VBox>
                                 <VBox alignment="CENTER" prefHeight="74.0" prefWidth="251.0">
                                     <children>
-                                        <Text fill="#5b5b5b" strokeType="OUTSIDE" strokeWidth="0.0" text="Time">
+                                        <Text fill="#5b5b5b" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #F1F2EB;" styleClass="medium-text" text="Time">
                                             <font>
                                                 <Font size="20.0" />
                                             </font>
@@ -61,12 +67,12 @@
                                         <TextField fx:id="timeField" prefHeight="35.0" prefWidth="250.0" promptText="HH:MM" />
                                     </children>
                                     <HBox.margin>
-                                        <Insets left="15.0" right="15.0" />
+                                        <Insets bottom="10.0" left="15.0" right="15.0" />
                                     </HBox.margin>
                                 </VBox>
                                 <VBox alignment="CENTER" prefHeight="200.0" prefWidth="250.0">
                                     <children>
-                                        <Text fill="#5b5b5b" strokeType="OUTSIDE" strokeWidth="0.0" text="Info">
+                                        <Text fill="#5b5b5b" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #F1F2EB;" styleClass="medium-text" text="Info">
                                             <font>
                                                 <Font size="20.0" />
                                             </font>
@@ -74,12 +80,15 @@
                                         <TextField fx:id="infoField" prefHeight="35.0" prefWidth="250.0" promptText="Information" />
                                     </children>
                                     <HBox.margin>
-                                        <Insets left="15.0" right="15.0" />
+                                        <Insets bottom="10.0" left="15.0" right="15.0" />
                                     </HBox.margin>
                                 </VBox>
                             </children>
+                     <VBox.margin>
+                        <Insets left="30.0" right="30.0" />
+                     </VBox.margin>
                         </HBox>
-                        <HBox alignment="CENTER" prefHeight="76.0" prefWidth="960.0">
+                        <HBox alignment="CENTER" prefHeight="90.0" prefWidth="960.0">
                             <children>
                                 <Button mnemonicParsing="false" onAction="#returnToAdministrateTournament" prefHeight="69.0" prefWidth="300.0" style="-fx-background-color: #FF282D; -fx-border-color: black; -fx-text-fill: white; -fx-font-size: 20pt;" text="Cancel" textFill="WHITE">
                                     <font>
@@ -105,7 +114,7 @@
                                 </Button>
                             </children>
                             <VBox.margin>
-                                <Insets top="15.0" />
+                                <Insets />
                             </VBox.margin>
                         </HBox>
                     </children>
