--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterPointResults.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterPointResults.fxml
@@ -60,7 +60,7 @@
                                           <Font size="70.0" />
                                        </font>
                                     </TextField>
-                                    <Button layoutX="330.0" layoutY="140.0" mnemonicParsing="false" onAction="#incrementTeam1PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: white;" styleClass="incrementButtons">
+                                    <Button fx:id="team1PlusButton" layoutX="330.0" layoutY="140.0" mnemonicParsing="false" onAction="#incrementTeam1PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: white;" styleClass="incrementButtons">
                                        <font>
                                           <Font size="20.0" />
                                        </font>
@@ -72,7 +72,7 @@
                                           </ImageView>
                                        </graphic>
                                     </Button>
-                                    <Button layoutX="330.0" layoutY="200.0" mnemonicParsing="false" onAction="#decrementTeam1PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: red;" styleClass="incrementButtons">
+                                    <Button fx:id="team1MinusButton" layoutX="330.0" layoutY="200.0" mnemonicParsing="false" onAction="#decrementTeam1PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: red;" styleClass="incrementButtons">
                                        <font>
                                           <Font size="20.0" />
                                        </font>
@@ -98,7 +98,7 @@
                                           <Font size="75.0" />
                                        </font>
                                     </TextField>
-                                    <Button layoutX="330.0" layoutY="140.0" mnemonicParsing="false" onAction="#incrementTeam2PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: green;" styleClass="incrementButtons">
+                                    <Button fx:id="team2PlusButton" layoutX="330.0" layoutY="140.0" mnemonicParsing="false" onAction="#incrementTeam2PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: green;" styleClass="incrementButtons">
                                        <font>
                                           <Font size="20.0" />
                                        </font>
@@ -109,7 +109,7 @@
                                              </image></ImageView>
                                        </graphic>
                                     </Button>
-                                    <Button layoutX="330.0" layoutY="200.0" mnemonicParsing="false" onAction="#decrementTeam2PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: red;" styleClass="incrementButtons">
+                                    <Button fx:id="team2MinusButton" layoutX="330.0" layoutY="200.0" mnemonicParsing="false" onAction="#decrementTeam2PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: red;" styleClass="incrementButtons">
                                        <font>
                                           <Font size="20.0" />
                                        </font>
