Table Background Change

--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/style.css
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/style.css
@@ -84,7 +84,7 @@
     -fx-font-size: 12pt;
     -fx-text-fill: #2D2D2D;
     -fx-opacity: 1;
-    -fx-background-color: #F7F7F3;
+    -fx-background-color: #2D2D2D;
     -fx-border-color:  #F7F7F3;
     -fx-border-width: 2;
     -fx-table-cell-border-color: #2D2D2D;
