--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/BracketMatchBlock.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/BracketMatchBlock.fxml
@@ -5,11 +5,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<HBox layoutX="10.0" layoutY="10.0" prefHeight="37.0" prefWidth="209.0" style="-fx-border-color: #019A06; -fx-background-color: #F7F7F3;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.BracketMatchBlockController">
+<HBox layoutX="10.0" layoutY="10.0" prefHeight="3.0" prefWidth="209.0" style="-fx-border-color: #019A06; -fx-background-color: #F7F7F3;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.BracketMatchBlockController">
     <children>
-        <VBox prefHeight="61.0" prefWidth="115.0" style="-fx-background-color: #F7F7F3;">
+        <VBox prefHeight="22.0" prefWidth="114.0" style="-fx-background-color: #F7F7F3;">
             <children>
-                <Label fx:id="Team1" style="-fx-text-fill: #2D2D2D;">
+                <Label fx:id="Team1" style="-fx-text-fill: #2D2D2D; -fx-font-size: 11;">
                     <font>
                         <Font size="18.0" />
                     </font>
@@ -17,7 +17,7 @@
                         <Insets left="5.0" top="3.0" />
                     </VBox.margin>
                 </Label>
-                <Label fx:id="Team2" style="-fx-text-fill: #2D2D2D;">
+                <Label fx:id="Team2" style="-fx-text-fill: #2D2D2D; -fx-font-size: 11;">
                     <font>
                         <Font size="18.0" />
                     </font>
@@ -27,9 +27,9 @@
                 </Label>
             </children>
         </VBox>
-        <VBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="61.0" prefWidth="96.0" style="-fx-background-color: #F7F7F3;">
+        <VBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="0.0" prefWidth="95.0" style="-fx-background-color: #F7F7F3;">
             <children>
-                <Label fx:id="PointsTeam1" alignment="CENTER_RIGHT" prefHeight="27.0" prefWidth="94.0" style="-fx-text-fill: #2D2D2D;" text="-" textAlignment="JUSTIFY">
+                <Label fx:id="PointsTeam1" alignment="CENTER_RIGHT" prefHeight="27.0" prefWidth="94.0" style="-fx-text-fill: #2D2D2D; -fx-font-size: 11;" text="-" textAlignment="JUSTIFY">
                     <font>
                         <Font size="18.0" />
                     </font>
@@ -37,7 +37,7 @@
                         <Insets left="5.0" right="5.0" top="3.0" />
                     </VBox.margin>
                 </Label>
-                <Label fx:id="PointsTeam2" alignment="CENTER_RIGHT" prefHeight="27.0" prefWidth="98.0" style="-fx-text-fill: #2D2D2D;" text="-" textAlignment="JUSTIFY">
+                <Label fx:id="PointsTeam2" alignment="CENTER_RIGHT" prefHeight="27.0" prefWidth="98.0" style="-fx-text-fill: #2D2D2D; -fx-font-size: 11;" text="-" textAlignment="JUSTIFY">
                     <font>
                         <Font size="18.0" />
                     </font>
