User Manual entry added to topMenuBar which links to Manual in wiki

--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/TopMenuBar.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/TopMenuBar.fxml
@@ -18,9 +18,9 @@
                 <MenuItem fx:id="topMenuBarAdministrate" mnemonicParsing="false" onAction="#changeSceneToAdministrateTournament" text="Administrate" />
             </items>
         </Menu>
-        <Menu fx:id="topMenuBarHelp" disable="true" mnemonicParsing="false" text="Help">
+        <Menu fx:id="topMenuBarHelp" mnemonicParsing="false" text="Help">
             <items>
-                <MenuItem mnemonicParsing="false" text="About" />
+                <MenuItem fx:id="topMenuBarManual" mnemonicParsing="false" onAction="#openManual" text="User manual" />
             </items>
         </Menu>
     </menus>
